--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
@@ -11,6 +12,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
